--- a/oefening1.html
+++ b/oefening1.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <div id="lijst">
-        <!-- in deze div komen alle groenten onder elkaar te staan -->
+      <!-- in deze div komen alle groenten onder elkaar te staan -->
     </div>
-    <script src="./script/script.js"></script>
+    <script src="./script/scriptOef1.js"></script>
   </body>
 </html>
