--- a/oefening2.html
+++ b/oefening2.html
@@ -12,6 +12,6 @@
     <div id="kostprijs">
       <!-- stap 2: in deze div komt de kostprijs van de gekozen groente -->
     </div>
-    <script src="./script/script.js"></script>
+    <script src="./script/scriptOef2.js"></script>
   </body>
 </html>
